profile frontend, filter accordion, nav bar updates, gallary view, fixes on alignment + image styling for post-single

--- a/public/styles.css
+++ b/public/styles.css
@@ -38,6 +38,10 @@ h1, .bold {
 	font-weight: 600;
 }
 
+h2 {
+	font-size: 24px;
+}
+
 .text-timestamp {
 	color: #9F9F9F;
 }
@@ -50,7 +54,38 @@ h1, .bold {
 	border: 1px solid black;
 	border-radius: 24px;
 	padding: 5px 10px;
-	margin-bottom: 10px
+	margin-bottom: 10px;
+	margin-right: 5px;
+}
+
+
+
+.selector {
+	display: inline-block;
+	font-size: 12px;
+	border: 1px solid black;
+	padding: 5px 10px;
+	margin-bottom: 10px;
+	margin-right: 5px;
+	color: white;
+	background-color: black; 
+	font-weight: 600;
+	font-size: 12px;
+	text-transform: uppercase;
+	border-radius: 12px; 
+	border: none;
+	padding: 9px 18px;
+}
+
+.city-tag {
+	display: inline-block;
+	font-family: "Graphik";
+	font-size: 12px;
+	border: 1px solid black;
+	border-radius: 24px;
+	padding: 5px 10px;
+	margin-bottom: 10px;
+	margin-right: 5px;
 }
 
 /* COMPONENTS */
@@ -80,16 +115,22 @@ input[type="submit"] {
 	color: white;
 	background-color: black; 
 	font-weight: 600;
+	font-size: 12px;
 	text-transform: uppercase;
 	border-radius: 12px; 
 	border: none;
 	padding: 9px 18px;
 }
 
+form label {
+	font-size: 12px;
+}
+
 /* NAV BAR */
 
+
 .navbar {
-	border-bottom: 3px solid black;
+	margin-top: 10px;
 }
 
 .navbar a {
@@ -98,6 +139,7 @@ input[type="submit"] {
 
 .nav-items {
 	display: inline;
+	margin: 0;
 }
 
 .nav-items li {
@@ -107,10 +149,11 @@ input[type="submit"] {
 	background-color: black; 
 	font-weight: 600;
 	text-transform: uppercase;
-	border-radius: 24px; 
+	border-radius: 12px; 
+	font-size: 12px;
 	border: none;
-	margin: 9px;
-	padding: 6px 9px;
+	margin: 9px 0px 9px 18px;
+	padding: 0px 2px 0px 2px;
 }
 
 .nav-items a {
@@ -118,17 +161,23 @@ input[type="submit"] {
 	color: white;
 }
 
-.navbar-img img {
-	width: 30px;
-}
-
 /* CONTAINERS */
 .container-fluid {
 	display: flex;
 	flex-wrap: wrap;
+	padding: 0px 30px 0px 30px;
 }
 
 .row {
+	width: 100%;
+}
+
+.container-image img {
+	width: 100%;
+	margin-bottom: 30px;
+}
+
+.gallery-image img {
 	width: 100%;
 }
 
@@ -142,6 +191,38 @@ form {
 
 label, select, input {
 	display: block;
+}
+
+/* ACCORDION */
+.accordion {
+	width: 100%;
+}
+
+/* Style for each session container */
+.session {
+	cursor: pointer;
+}
+
+/* Style for the content that can be collapsed */
+.content {
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.25s ease-in-out;
+}
+
+/* Style for the content when it's visible */
+.content.active {
+	display: block;
+	max-height: none;
+}
+
+.arrow-container img {
+	transition: transform 0.25s ease; /* Smooth transition for rotation */
+}
+
+/* Rotate the image by 180 degrees when the "active" class is added */
+.session.active .arrow-container img {
+	transform: rotate(180deg);
 }
 
 /* SMALL SCREEN SIZE */
